--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@ strong, b{
     height: 54px;
     display: flex;
     justify-content: space-between;
-    margin: 0 auto; 
+    margin: 0 auto;
+    background-color: brown;
 }
 .logo{
     
@@ -76,7 +77,6 @@ hr{
     margin-top: 88px;
 }
 .conteudo-esquerda{
-    width: 75%;
     width: 614px;
     /* border: 1px solid red; */
 }
@@ -116,7 +116,7 @@ hr{
     border-image-source: url(./img/stories_background1.png);
     border-image-width: 78px;
     border-image-slice: 33;
-    padding: 2px;
+    /* padding: 2px; */
     border-radius: 50%;
 }
 
@@ -292,6 +292,7 @@ font-size: 11px;
  }
  .legal p:last-child{
      margin-top: 18px;
+     margin-left:-7px;
 
  }
 
@@ -301,6 +302,13 @@ font-size: 11px;
     }
 
     .conteudos{
+        justify-content: center;
+        width: 610px;
+        /* background-color: brown; */
+    }
+    .conteudo-esquerda{
+        width: 610px;
+        /* background-color: blue; */
         justify-content: center;
     }
     .topo{
@@ -321,9 +329,10 @@ font-size: 11px;
          flex-direction: row-reverse;
      }
      .conteudos{
-        width: 100%;
+        
         margin-top: 54px;
     }
+    
     .setinha{
         display:none;
     }
