--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ strong, b{
     position: fixed;
     top:0;left:0;
     border-bottom: 1px solid #DBDBDB; 
+    background-color: crimson;
 }
 .topo{
     
@@ -25,7 +26,8 @@ strong, b{
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
-    background-color: brown;
+    background-color: cornflowerblue;
+    
 }
 .logo{
     
@@ -78,7 +80,6 @@ hr{
 }
 .conteudo-esquerda{
     width: 614px;
-    /* border: 1px solid red; */
 }
 .stories{
     width: 614px;
@@ -211,10 +212,13 @@ hr{
     width: 20px;
 }
 .conteudo-direita{
-    height: 300px;
-    width: 292px;
+    height: 100%;
+    /* width: 292px; */
     margin-left: 25px;
     font-size: 14px;
+    
+    
+    
     /* background-color: coral; */
 }
 
@@ -245,6 +249,7 @@ hr{
 
 .para-seguir{
     margin-top: 4px;
+    
 }
 .sugestoes-titulo p:first-child{
     color: #8E8E8E;
@@ -283,6 +288,7 @@ hr{
  .legal{
      margin-top: 33px;
      width: 300px;
+     margin-left:-7px;
  }
  .legal, .legal a{
 color:#C7C7C7;
@@ -292,7 +298,7 @@ font-size: 11px;
  }
  .legal p:last-child{
      margin-top: 18px;
-     margin-left:-7px;
+    
 
  }
 
@@ -339,5 +345,6 @@ font-size: 11px;
     .postagens{
         margin-top:0;
     }
+    
  }
 
