--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ strong, b{
     position: fixed;
     top:0;left:0;
     border-bottom: 1px solid #DBDBDB; 
-    background-color: crimson;
 }
 .topo{
     
@@ -26,7 +25,6 @@ strong, b{
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
-    background-color: cornflowerblue;
     
 }
 .logo{
@@ -98,6 +96,8 @@ hr{
 .setinha{
     position:absolute;
     right: 9px;
+    color: #FFFFFF;
+    font-size: 26px;
 }
 
 .story{
@@ -110,19 +110,15 @@ hr{
 .story img{
     width: 58px;
     height: 58px;
-    /* margin-left: 10%; */
-    /* margin: 10px; */
-    
+    padding: 2px;
     border: 2px solid;
     border-image-source: url(./img/stories_background1.png);
-    border-image-width: 78px;
+    border-image-width: 100%;
     border-image-slice: 33;
-    /* padding: 2px; */
-    border-radius: 50%;
+    /* border-radius: 50%; */
 }
 
 .story p{
-
     text-align: center;
     margin-top:0;
     width: 78px;
@@ -132,7 +128,6 @@ hr{
 .postagens{
     height: 1000px;
     margin-top: 24px;
-
 }
 
 .post{
@@ -182,17 +177,13 @@ hr{
 
 .info-post{
     height: 76px;
-    
-    
 }
 .botoes-post{
     display: flex;
     justify-content: space-between;
     padding: 10px 15px;
     font-size: 23px;
-
 }
-
 
 .b-esquerda ion-icon{
     margin-right: 5px;
@@ -213,13 +204,8 @@ hr{
 }
 .conteudo-direita{
     height: 100%;
-    /* width: 292px; */
     margin-left: 25px;
     font-size: 14px;
-    
-    
-    
-    /* background-color: coral; */
 }
 
 .foto-nick{
@@ -298,9 +284,11 @@ font-size: 11px;
  }
  .legal p:last-child{
      margin-top: 18px;
-    
-
  }
+.barra-android{
+    display:none;
+}
+ 
 
  @media (max-width: 935px) {
     .conteudo-direita{
@@ -310,11 +298,9 @@ font-size: 11px;
     .conteudos{
         justify-content: center;
         width: 610px;
-        /* background-color: brown; */
     }
     .conteudo-esquerda{
         width: 610px;
-        /* background-color: blue; */
         justify-content: center;
     }
     .topo{
@@ -327,7 +313,6 @@ font-size: 11px;
      }
      .logo{
          width: 60%;
-
      }
 
      .icons{
@@ -335,8 +320,10 @@ font-size: 11px;
          flex-direction: row-reverse;
      }
      .conteudos{
-        
         margin-top: 54px;
+    }   
+    .stories{
+        border: none;
     }
     
     .setinha{
@@ -345,6 +332,25 @@ font-size: 11px;
     .postagens{
         margin-top:0;
     }
+    .barra-android{
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        height: 54px;
+        background: #FFFFFF;
+        position: fixed;
+        bottom:0;left:0;
+        border-bottom: 1px solid #DBDBDB; 
+     }
+     .icons-android{
+        width: 100%;
+        height: 54px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-size: 25px;
+        margin: 0 20px;
+     }
     
  }
 
